<resources>
    <string name="app_name">Final_Project</string>
    <string name="Email_Address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Enter">Enter</string>
    <string name="Username">Username</string>
    <string name="Role">Role</string>
    <string name="welcome">Welcome! Congratulations on Creating an Account</string>
    <string name="LogIn">Log In</string>
    <string name="welcomeText">Welcome</string>
    <string name="welcomeMessage2">you are logged in as</string>
    <string name="Register">Click Here to Register</string>
    <string name="Continue">Continue?</string>

    <string-array name="Choices">
        <item>Admin</item>
        <item>Service Provider</item>
        <item>Home Owner</item>
    </string-array>
    <string name="title_activity_services">Services</string>
    <string name="Services">Services</string>
    <string name="hourly">What is the Hourly Rate</string>
    <string name="serviceOffered">What Service Would You Like To Offer?</string>
    <string name="Change">Change</string>
    <string name="title_activity_serviceprofile">serviceprofile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="License">License</string>
    <string name="Description">Description</string>
    <string name="Company">Company</string>
    <string name="service_Provider">SERVICE PROVIDER</string>
    <string name="date">Date Available</string>
    <string name="Time">Time Available</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="dateAvailability">Date Available</string>
    <string name="timeAvailability">What timeslot are you available?</string>
    <string name="title_activity_add_services_to_provider">AddServicesToProvider</string>
    <string name="title_activity_home_owner_profile">homeOwnerProfile</string>
    <string name="HOME_OWNER">HOME OWNER</string>
    <string name="title_activity_home_owner_calendar">HomeOwnerCalendar</string>
    <string name="date_time">Date and Time Booked</string>
    <string name="servicedone">Service Being Done</string>
    <string name="serviceprovider">Service Provider</string>
    <string name="who">Who Provides Service</string>
    <string name="Rating">Rating</string>
    <string name="Amount">How Much It Costs</string>
</resources>
