<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <ImageButton
      android:id="@+id/checkImage"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:background="@android:color/holo_blue_bright"
      app:srcCompat="@android:drawable/btn_dialog" />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="5dp"
      android:orientation="vertical">

    <TextView
        android:id="@+id/Date_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/date_time" />

    <TextView
        android:id="@+id/Service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/servicedone" />

    <TextView
        android:id="@+id/ServiceProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/serviceprovider" />
  </LinearLayout>
</LinearLayout>