<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".serviceprofile"
    tools:showIn="@layout/app_bar_serviceprofile">

    <TextView
        android:id="@+id/SERVICE_PROVIDER"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/service_Provider"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Description"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="79dp"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Description"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="136dp"
        android:text="@string/Address" />

    <TextView
        android:id="@+id/addressInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameInput"
        android:layout_alignTop="@+id/Address"
        android:text="TextView" />

    <TextView
        android:id="@+id/Phone_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Description"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="187dp"
        android:text="@string/Phone_Number" />

    <TextView
        android:id="@+id/phonenumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameInput"
        android:layout_alignTop="@+id/Phone_Number"
        android:text="TextView" />

    <TextView
        android:id="@+id/Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Description"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="239dp"
        android:text="@string/Company" />

    <TextView
        android:id="@+id/companyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameInput"
        android:layout_alignTop="@+id/Company"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/License"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Name"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="197dp"
        android:text="@string/License" />

    <TextView
        android:id="@+id/licenseInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameInput"
        android:layout_alignTop="@+id/License"
        android:layout_marginStart="2dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="356dp"
        android:layout_height="162dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="336dp"
        android:text="TextView" />
</RelativeLayout>