<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LogIn_Screen">

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/calendarAvailability"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="50"
        tools:listitem="@layout/recycler_view_item" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:ems="10"
        android:hint="@string/dateAvailability"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="218dp"
        android:ems="10"
        android:hint="@string/timeAvailability"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Time"
        android:layout_marginTop="280dp"
        android:text="@string/Enter" />

</RelativeLayout>